Fix minor alignment issues on text-container

--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
 .main-container {
   margin-left: 1rem;
   margin-right: 1rem;
-  border-radius: 1rem;
+  border-radius: 0.6rem;
   background-color: white;
   max-width: 20.8rem;
   overflow: hidden;
@@ -52,10 +52,10 @@ body {
   /* display: grid;
   grid-template-rows: repeat(4, auto) 1fr;
   row-gap: 1rem; */
-  padding: 1.8rem;
+  padding: 2rem;
   display: flex;
   flex-direction: column;
-  gap: 2rem;
+  gap: 1.4rem;
 }
 
 .category-text {
@@ -64,7 +64,7 @@ body {
   font-size: 0.775rem;
   color: hsl(228deg 12% 37.05%);
   text-transform: uppercase;
-  letter-spacing: 0.5rem;
+  letter-spacing: 0.3rem;
 }
 
 .name-text {
@@ -95,14 +95,14 @@ body {
   font-weight: 700;
 }
 
-/* .visually-hidden-price {
-  font-size: 0.875rem;
+.visually-hidden-price {
+  font-size: 0.8rem;
   font-family: "Montserrat", sans-serif;
   font-weight: 500;
   text-decoration: line-through;
   color: hsl(228deg 12% 37.05%);
 
-} */
+}
 
 .visually-hidden {
   position: absolute;
@@ -116,15 +116,6 @@ body {
   border: 0;
 }
 
-
-.original-price {
-  font-size: 0.875rem;
-  font-family: "Montserrat", sans-serif;
-  font-weight: 500;
-  text-decoration: line-through;
-  color: hsl(228deg 12% 37.05%);
-}
-
 .cart-button {
   background-color: hsl(158, 36%, 37%);
   border: 0;
@@ -134,10 +125,12 @@ body {
   color: white;
   border-radius: 0.5rem;
   padding: 1rem;
+  margin-top:auto;
+
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 1rem;
+  gap: 0.7rem;
 }
 
 /* .attribution-footer {
